--- a/intermediate_goods_result.html
+++ b/intermediate_goods_result.html
@@ -14925,16 +14925,14 @@ $$
 \implies \eta^{RP}f_{l_1} = \mu^{RP}h_{l_2} \tag{1}
 $$
 and, rearranging the first-order condition for $z$,
-$$</p>
-<ul>
-<li>\eta^{RP}f_z  = \mu^{RP}h_z \tag{2}
+$$
+\eta^{RP}f_z  = -\mu^{RP}h_z \tag{2}
 $$
 and, dividing $(2)$ by $(1)$ we obtain
 $$
--\frac{f<em>z}{f</em>{l_1}} = \frac{h<em>z}{h</em>{l_2}} \tag{3}
+\frac{f_z}{f_{l_1}} = -\frac{h_z}{h_{l_2}} \tag{3}
 $$
-This is the key equation here. </li>
-</ul>
+This is the key equation in this environment.</p>
 
 </div>
 </div>
