--- a/Larry/intermediate_goods/intermediate_goods_result.html
+++ b/Larry/intermediate_goods/intermediate_goods_result.html
@@ -14580,7 +14580,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="Intermediate-goods-taxation"><strong>Intermediate goods taxation</strong><a class="anchor-link" href="#Intermediate-goods-taxation">&#182;</a></h1>
+<h1 id="Intermediate-Goods-Taxation"><strong>Intermediate Goods Taxation</strong><a class="anchor-link" href="#Intermediate-Goods-Taxation">&#182;</a></h1>
 </div>
 </div>
 </div>
