fixed a typo and recommited the html file

--- a/Larry/hyperbolic_discounting/hyp_discounting.html
+++ b/Larry/hyperbolic_discounting/hyp_discounting.html
@@ -14612,14 +14612,12 @@ $$
 c_1+c_2+c_3 = w
 $$
 <strong><em>Lack of self control:</em></strong></li>
-<li>Preferences in each period are
-$$</li>
+<li>Preferences in each period are</li>
 </ul>
 <ol>
-<li>\quad U_1 = u(c_1) + \delta[\beta u(c_2)+ \beta^2 u(c_3)] \</li>
-<li>\quad U_2 = u(c_2) + \delta \beta u(c_3) \</li>
-<li>\quad U_3 = u(c_3)
-$$</li>
+<li>$\quad U_1 = u(c_1) + \delta[\beta u(c_2)+ \beta^2 u(c_3)] $ </li>
+<li>$\quad U_2 = u(c_2) + \delta \beta u(c_3)$</li>
+<li>$\quad U_3 = u(c_3)$</li>
 </ol>
 <ul>
 <li>The critical feature of the model is that 1. and 2. disagree about the marginal rate of substitution between consumption at $t=2$ and $3$.To see this, consider that
