--- a/Larry/intermediate_goods/intermediate_goods_result.html
+++ b/Larry/intermediate_goods/intermediate_goods_result.html
@@ -14666,7 +14666,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <li>government consumption, <em>g</em>, and</li>
 <li>labour, <em>l</em>.</li>
 </ul>
-<p>There is also one intermediate good, indexed by <em>z</em>.
+<p>There is also one intermediate good, indexed by $z$.
 In this economy, the Ramsey planner has taxes on consumption and the intermediate good at his disposal, denoted by $\tau_c$ and $\tau_z$ respectively. There is no labour income tax. That is, $\tau_n= 0$.
 Preferences are of the form:
 $$
