--- a/Larry/intermediate_goods/intermediate_goods_result.html
+++ b/Larry/intermediate_goods/intermediate_goods_result.html
@@ -14808,7 +14808,7 @@ where $r$ is the price of the government consumption good.</p>
 <p>We will proceed in the following manner:</p>
 <ul>
 <li><em>(1)</em> Solve the household's problem and derive the implementability constraint</li>
-<li><em>(2)</em> Setup the Ramsey planner's problem for an optimal production condition</li>
+<li><em>(2)</em> Setup the Ramsey planner's problem and solve for an optimal production condition</li>
 <li><em>(3)</em> Find the optimal production decisions for the firms in the decentralised economy</li>
 <li><em>(4)</em> Compare the two sets of conditions and find that $\tau_z=0$ is optimal.</li>
 </ul>
