fixed a mistake in the planner's Lagrangian

--- a/Larry/intermediate_goods/intermediate_goods_result.html
+++ b/Larry/intermediate_goods/intermediate_goods_result.html
@@ -14891,20 +14891,20 @@ h(z,g,l_2) = 0
 $$
 and the corresponding Lagrangian is
 $$
-\mathcal{L}^{RP} = U(c,1-(l_1+l_2)) + \lambda^{RP}[cU_c - U_l(l_1+l_2)] +\eta^{RP} [f(c,z,l_1)] + \mu^{RP}[h(z,g,l_2)].
+\mathcal{L}^{RP} = U(c,1-(l_1+l_2)) + \lambda^{RP}[cU_c - U_l(l_1+l_2)] +\eta^{RP} [-f(c,z,l_1)] + \mu^{RP}[-h(z,g,l_2)].
 $$
 The first-order conditions of this problem are
 $$
-\left[c\right]: 0 = U_c + \lambda^{RP}\{cU_{cc} + U_c - U_{lc}(l_1+l_2)\} + \eta^{RP} f_c
+\left[c\right]: 0 = U_c + \lambda^{RP}\{cU_{cc} + U_c - U_{lc}(l_1+l_2)\} - \eta^{RP} f_c
 $$
 $$
-\left[z\right]:  0=\eta^{RP} f_z + \mu^{RP}h_z
+\left[z\right]:  0=- \eta^{RP} f_z - \mu^{RP}h_z
 $$
 $$
-\left[l_1\right]: 0 = -U_l + \lambda^{RP}\{cU_{cl} -[-U_{ll}(l_1+l_2)+ U_l]\} +\eta^{RP}f_{l_1}
+\left[l_1\right]: 0 = -U_l + \lambda^{RP}\{cU_{cl} -[-U_{ll}(l_1+l_2)+ U_l]\} - \eta^{RP}f_{l_1}
 $$
 $$
-\left[l_2\right]: 0 = -U_l + \lambda^{RP}\{cU_{cl} -[-U_{ll}(l_1+l_2)+ U_l]\} +\mu^{RP}h_{l_2}
+\left[l_2\right]: 0 = -U_l + \lambda^{RP}\{cU_{cl} -[-U_{ll}(l_1+l_2)+ U_l]\} - \mu^{RP}h_{l_2}
 $$</p>
 
 </div>
@@ -14919,7 +14919,7 @@ $$</p>
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p>From the first-order conditions on $l_1$ and $l_2$
 $$
--U_l + \lambda^{RP}\{cU_{cl} -[-U_{ll}(l_1+l_2)+ U_l]\} +\eta^{RP}f_{l_1} =  -U_l + \lambda^{RP}\{cU_{cl} -[-U_{ll}(l_1+l_2)+ U_l]\} +\mu^{RP}h_{l_2}
+-U_l + \lambda^{RP}\{cU_{cl} -[-U_{ll}(l_1+l_2)+ U_l]\} -\eta^{RP}f_{l_1} =  -U_l + \lambda^{RP}\{cU_{cl} -[-U_{ll}(l_1+l_2)+ U_l]\} -\mu^{RP}h_{l_2}
 $$
 $$
 \implies \eta^{RP}f_{l_1} = \mu^{RP}h_{l_2} \tag{1}
