--- a/Larry/uniform_commodity/unif_commodity.html
+++ b/Larry/uniform_commodity/unif_commodity.html
@@ -14918,7 +14918,7 @@ $$</p>
 $$
 U(c,l) = W(G(c),l)
 $$
-and that G is homothetic. Then, at the solution to the Ramsey problem, $\tau_i - \tau_j, \forall i,j \in \{1,\ldots,J\}$.</p>
+and that G is homothetic. Then, at the solution to the Ramsey problem, $\tau_i = \tau_j, \forall i,j \in \{1,\ldots,J\}$.</p>
 
 </div>
 </div>
