--- a/Larry/uniform_commodity/unif_commodity.html
+++ b/Larry/uniform_commodity/unif_commodity.html
@@ -15082,7 +15082,7 @@ $$
 $$
 \frac{U_i}{F_i} = \frac{U_j}{F_j}, \forall i,j 
 $$
-which by our previous results that $\tau_i = \tau_j, \forall i,j$.</p>
+which by our previous results implies that $\tau_i = \tau_j, \forall i,j$.</p>
 
 </div>
 </div>
