--- a/Larry/hyperbolic_discounting/hyp_discounting.html
+++ b/Larry/hyperbolic_discounting/hyp_discounting.html
@@ -14619,16 +14619,14 @@ $$
 <li>$\quad U_2 = u(c_2) + \delta \beta u(c_3)$</li>
 <li>$\quad U_3 = u(c_3)$</li>
 </ol>
-<ul>
-<li>The critical feature of the model is that 1. and 2. disagree about the marginal rate of substitution between consumption at $t=2$ and $3$. To see this, consider that
+<p>The critical feature of the model is that 1. and 2. disagree about the marginal rate of substitution between consumption at $t=2$ and $3$. To see this, consider that
 $$
 \frac{U_{1,2}}{U_{1,3}} = \frac{\delta \beta u'(c_2)}{\delta \beta^2 u'(c_3)} = \frac{u'(c_2)}{\beta u'(c_3)}
 $$
 $$
 \frac{U_{2,2}}{U_{2,3}} = \frac{u'(c_2)}{\delta \beta u'(c_3)}
 $$
-where the first subscript indicates the time period today and the second indicates the period which we are taking the derivative with respect to. Note that $\delta&lt;1$ is the usual calibration. If $\delta=1$ then there is no issue.</li>
-</ul>
+where the first subscript indicates the time period today and the second indicates the period which we are taking the derivative with respect to. Note that $\delta&lt;1$ is the usual calibration. If $\delta=1$ then there is no issue.</p>
 
 </div>
 </div>
@@ -14643,7 +14641,7 @@ where the first subscript indicates the time period today and the second indicat
 <p>There are two versions of this game.</p>
 <ol>
 <li><strong><em>Commitment:</em></strong> The agent in the first period chooses the entire allocation: $\{c^*_1,c^*_2,c^*_3\}$</li>
-<li><strong><em>No commitment:</em></strong> The first agent chooses $\{c^{1}_1,c^{1}_2,c^{1}_3\}$, the second chooses $\{c^{2}_2,c^{2}_3\}$ and the third chooses $\{c^{3}_3\}$ </li>
+<li><strong><em>No commitment:</em></strong> The first agent chooses $\{c_1,s_1\}$, the second chooses $\{c_2,s_2\}$ and the third chooses $\{c_3\}$ </li>
 </ol>
 <p>We will consider subgame perfect equilibria.</p>
 
@@ -14852,7 +14850,7 @@ and if $\delta=1$ we collapse down to the commitment case.</p>
 <p>Problem of agent 3 is now
 $$
 \max_{\{c_3\}} \log(c_3) \\
-s.t. c_3 \leq \frac{s_2}{1-\tau}, \quad (&gt;s_2)\\
+s.t. \quad c_3 \leq \frac{s_2}{1-\tau}, \quad (&gt;s_2)\\
 c_3 \geq 0\\
 $$
 and the solution is trivially $c_3 = \frac{s_2}{1-\tau}$.</p>
